--- a/index.html
+++ b/index.html
@@ -97,9 +97,18 @@
                               <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                           </div>
-                      </div>
+                          <br><br><br>
+                          <div class="col-md-12">
+                            <form>
+                                <div class="form-group">
+                                  <label for="exampleFormControlFile1">Example file input</label>
+                                  <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                                </div>
+                              </form>
+                          </div>
                         </div>
-                        <div class="col-md-4"> 
+                        <br><br><br>
+                        <div class="col-md-4" width="100%"> 
                             <nav aria-label="Page navigation example">
                                 <ul class="pagination">
                                   <li class="page-item"><a class="page-link" href="#">Previous</a></li>
